# skillhub-books-old

./: .env.example  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile
